# Dystopia

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.claude/: settings.local.json
docs/: architecture.md  condition-system.md  game-design.md  lore-editor-plan.md  remote-access.md  settings.md  to-do.md
lore/campbell/: locations.json  npcs.json
lore/items/: 3daudiobook.json  _schema.json  bread.json  crambell_work_permit.json  empty_bottle.json  frozensardine.json  generic_note.json  transit_pass.json  water_bottle.json  wyar_transit_pass.json
lore/world/: conditions.json  index.json  phases.json  starter.json
scripts/: test-hf.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
src/tests/: CrambellRoute1.integration.test.ts  CrambellRoute4.integration.test.ts  CrambellRoute4Alliance.integration.test.ts  CrambellRoute5.integration.test.ts  DiceEngine.test.ts  EncounterEngine.story.test.ts  EventEngine.test.ts  FlagSystem.test.ts  GameController.eventFlow.test.ts  GameController.factionGraph.test.ts  GameController.moveResolution.test.ts  GameController.questSummary.test.ts  GameController.scriptedTrigger.test.ts  ItemTemplate.test.ts  JudgeValidation.test.ts  LoreVault.itemVariant.test.ts  LoreVault.pathfinding.test.ts  QuestEngine.abandon.test.ts  QuestEngine.test.ts  QuestRepeatableFailure.test.ts  Regulator.integration.test.ts  (+3 more)
(+260 files in other folders)
