[package]
name = "dystopia"
version = "0.1.0"
description = "Dystopia — LLM-driven theatrical RPG"
authors = ["unforgettableeternalproject"]
edition = "2021"

[lib]
name = "dystopia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
